env/code_53ea322ecedce/stderr.txt
  File "main.py", line 2
    print "hello world"
                      ^
SyntaxError: invalid syntax
